samples/_failures_safe/1761420016_f8ca20_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_304f28d9.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_304f28d9.c:186:17: error: expected identifier at end of input
  186 |                 graph->edges[i]->
      |                 ^~~~~
./samples/SAFE/__tmp_304f28d9.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_304f28d9.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_304f28d9.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_304f28d9.c:186:17: error: expected declaration or statement at end of input
